<resources>
    <!--Haupt App -->
    <string name="app_name">crafted</string>

    <!-- Page Hilfe finden-->
    <string name="hilfe_finden_header">Hilfe finden</string>


    <!-- Testdaten -->
    <string-array name="hilfe_finden_profil_name">
        <item>Henry Gräfe</item>
        <item>Ana ORiley</item>
        <item>George Obama</item>
        <item>Stan Daniels</item>
        <item>Jill Styles</item>
    </string-array>

    <string-array name="hilfe_finden_profil_verified">
        <item>Elektriker</item>
        <item>Statiker</item>
        <item>Tischler</item>
        <item>Idiot</item>
        <item>Klemptner</item>
    </string-array>

    <integer-array name="hilfe_finden_profil_rating">
        <item>5</item>
        <item>2</item>
        <item>3</item>
        <item>1</item>
        <item>4</item>
    </integer-array>

    <string-array name="hilfe_finden_profil_beschreibung">
        <item>Habe schon mehrere Häuser verkabelt</item>
        <item>War schon auf mehreren Bauprojekten</item>
        <item>Vor kurzem habe ich ein Boot gebaut</item>
        <item>Habe schon einmal mein Haus abgefackelt und es überlebt</item>
        <item>Bin für die Rohrverlegung des Rathauses zuständig gewesen</item>
    </string-array>


    <string-array name="hilfe_finden_profil_tag">
        <item>Holz</item>
        <item>Statik</item>
        <item>Sanitär</item>
        <item>Metall</item>
        <item>Elektrik</item>
    </string-array>
    <string name="title_activity_login">login</string>

    <!-- Strings used for Login -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ForgetPass">Passwort vergessen</string>
    <string name="text">Text</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="ordne_dein_ticket_nun_abschlie_end_weiteren_themen_zu">Ordne dein Ticket nun abschließend weiteren Themen zu</string>
    <string name="zur_ck">Zurück</string>
    <string name="fast_geschafft">Fast Geschafft!</string>
    <string name="neues_ticket">Neues Ticket</string>
    <string name="weiter">Weiter</string>
    <string name="navbar_mein_profil">Mein Profil</string>
    <string name="navbar_chats">Chats</string>
    <string name="navbar_helfen">Helfen</string>
    <string name="navbar_hilfe_finden">Hilfe finden</string>

</resources>